fetch data from backend in homepage
