# packages/event/public/swagger.json
@@ -315,23 +315,6 @@
 					}
 				]
 			}
-		},
-		"/v1/events/events": {
-			"get": {
-				"operationId": "FindAllEvent",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			}
 		}
 	},
 	"servers": [
